--- a/backend/TaskViewAPI/pom.xml
+++ b/backend/TaskViewAPI/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>js-cookie</artifactId>
             <version>2.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.19.jre7</version>
+        </dependency>
     </dependencies>
 
     <build>
