--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>2.4.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
